--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kbco/router",
-  "version": "0.3.2",
+  "version": "0.3.4",
   "description": "A simple router wrapper for express",
   "main": "index.js",
   "repository": "kbcomputers/router-wrapper",
@@ -18,7 +18,9 @@
     "mocha": "^4.1.0",
     "supertest": "^3.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/express": "^4.17.0"
+  },
   "keywords": [
     "web",
     "router"
